kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
    tier: api
spec:
  selector:
    app: backend
    track: blue
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
