kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
    tier: web
spec:
  selector:
    app: frontend
    track: blue
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
